app/src/test/resources/programs/invalid/various/KnownReturnedType.exe
foo fun() -> Int = 2;

foo main() -> Int = {
    if (fun() == 1) then {
       2
    }
    else{
       ()
    }
}
